Fix .skip-to-content z-index

--- a/less/site.less
+++ b/less/site.less
@@ -407,6 +407,7 @@ img {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
   text-align: center;
   padding: 1rem;
   position: absolute;
